objects/Task__c.object
<CustomObject>
    <description>There can be one or more tasks associated with an exercise.</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exercise__c</fullName>
        <label>Exercise</label>
        <referenceTo>Exercise__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Image__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &apos;Active&apos;), IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;Completed&apos;) , IMAGE(&apos;/img/samples/light_yellow.gif&apos;, &apos;Pending&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Video_ID__c</fullName>
        <label>Video ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxPossibleScore__c</fullName>
        <description>Sum of Total_score of all the steps related to the task</description>
        <label>maxPossibleScore</label>
        <summarizedField>Step__c.Total_points__c</summarizedField>
        <summaryForeignKey>Step__c.Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Body__c</columns>
        <columns>Exercise__c</columns>
        <columns>Sequence__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>